--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ baseurl:          /
 logo:             /content/images/me.jpg
 
 author:
-  name:           'Chris Banes'
+  name:           'Cangol'
   url:            https://plus.google.com/+ChrisBanes
 
 paginate:         5
@@ -26,8 +26,6 @@ github:
 
 gems:
   - jekyll-sitemap
-
-twitter: '@chrisbanes'
 
 kramdown:
   # Enable GitHub Flavored Markdown (fenced code blocks)
