--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title:            Cangol
 description:      'Can go anywhere, if i want to'
 url:              http://cangol.mobi
 baseurl:          /
-logo:             /content/images/me.jpg
+logo:             /content/images/me.jpeg
 
 author:
   name:           'Cangol'
