--- a/_config.yml
+++ b/_config.yml
@@ -14,9 +14,9 @@ logo:             /content/images/me.jpeg
 
 author:
   name:           'Cangol'
-  url:            https://plus.google.com/+ChrisBanes
+  url:            https://plus.google.com/+Cangol
 
-paginate:         5
+paginate:         10
 
 disqus_shortname: Cangol
 
