--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,8 @@
 # Dependencies
 markdown:         redcarpet
 highlighter:      pygments
-
+redcarpet:
+  extensions: [ "fenced_code_blocks", "hard_wrap","autolink", "tables", "strikethrough", "superscript", "with_toc_data", "highlight", "prettify","no_intra_emphasis"]
 # Permalinks
 permalink:        pretty
 
