--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ permalink:        pretty
 # Setup
 title:            Cangol
 description:      'Can go anywhere, if i want to'
-url:              http://cangol.mobi
+url:              https://cangol.mobi
 baseurl:          /
 logo:             /content/images/me.jpeg
 
